--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "decky-plugin-template",
+  "name": "decky-nested-desktop",
   "version": "0.0.1",
-  "description": "A template to quickly create decky plugins from scratch, based on TypeScript and webpack",
+  "description": "Create and launch nested desktop shortcuts for Steam Deck",
   "type": "module",
   "scripts": {
     "build": "rollup -c",
@@ -10,21 +10,21 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/SteamDeckHomebrew/decky-plugin-template.git"
+    "url": "git+https://github.com/xXJSONDeruloXx/decky-nested-desktop.git"
   },
   "keywords": [
     "decky",
     "plugin",
-    "plugin-template",
+    "nested-desktop",
     "steam-deck",
     "deck"
   ],
-  "author": "You <you@you.tld>",
+  "author": "xXJSONDeruloXx",
   "license": "BSD-3-Clause",
   "bugs": {
-    "url": "https://github.com/SteamDeckHomebrew/decky-plugin-template/issues"
+    "url": "https://github.com/xXJSONDeruloXx/decky-nested-desktop/issues"
   },
-  "homepage": "https://github.com/SteamDeckHomebrew/decky-plugin-template#readme",
+  "homepage": "https://github.com/xXJSONDeruloXx/decky-nested-desktop#readme",
   "devDependencies": {
     "@decky/rollup": "^1.0.1",
     "@decky/ui": "^4.7.2",
